# agent-status

./: README.md  overview.md  setup.md  test.txt
docs/go-architecture/: api.md  architecture.md  dev.md  setup.md
wazuh-agent-status-client-tauri/: Cargo.toml  README.md  tauri.conf.json
wazuh-agent-status-client-tauri/src/: backend_client.rs  logging.rs  main.rs  tray.rs  version_checker.rs
